wrappers/devolutions-crypto.h


int64_t Encrypt(const uint8_t *data,
                uintptr_t data_length,
                const uint8_t *key,
                uintptr_t key_length,
                uint8_t *result,
                uintptr_t result_length,
                uint16_t version);
int64_t EncryptAsymmetric(const uint8_t *data,
                          uintptr_t data_length,
                          const uint8_t *public_key,
                          uintptr_t public_key_length,
                          uint8_t *result,
                          uintptr_t result_length,
                          uint16_t version);
int64_t EncryptSize(uintptr_t data_length, uint16_t version);
int64_t EncryptAsymmetricSize(uintptr_t data_length,
                              uint16_t version);
int64_t Decrypt(const uint8_t *data,
                uintptr_t data_length,
                const uint8_t *key,
                uintptr_t key_length,
                uint8_t *result,
                uintptr_t result_length);
int64_t DecryptAsymmetric(const uint8_t *data,
                          uintptr_t data_length,
                          const uint8_t *private_key,
                          uintptr_t private_key_length,
                          uint8_t *result,
                          uintptr_t result_length);
int64_t HashPassword(const uint8_t *password,
                     uintptr_t password_length,
                     uint32_t iterations,
                     uint8_t *result,
                     uintptr_t result_length);
int64_t HashPasswordLength();
int64_t VerifyPassword(const uint8_t *password,
                       uintptr_t password_length,
                       const uint8_t *hash,
                       uintptr_t hash_length);
int64_t GenerateKeyPair(uint8_t *private_,
                        uintptr_t private_length,
                        uint8_t *public_,
                        uintptr_t public_length);
int64_t GenerateKeyPairSize();
int64_t DeriveKeyPairSize();
int64_t MixKeyExchange(const uint8_t *private_,
                       uintptr_t private_size,
                       const uint8_t *public_,
                       uintptr_t public_size,
                       uint8_t *shared,
                       uintptr_t shared_size);
int64_t MixKeyExchangeSize();
int64_t GenerateSharedKey(uint8_t n_shares,
                          uint8_t threshold,
                          uintptr_t length,
                          uint8_t *const *shares);
int64_t GenerateSharedKeySize(uintptr_t secret_length);
int64_t JoinShares(uintptr_t n_shares,
                   uintptr_t share_length,
                   const uint8_t *const *shares,
                   uint8_t *secret,
                   uintptr_t secret_length);
int64_t JoinSharesSize(uintptr_t share_length);
int64_t GenerateKey(uint8_t *key,
                    uintptr_t key_length);
int64_t DeriveKeyArgon2(const uint8_t *key,
                        uintptr_t key_length,
                        const uint8_t *argon2_parameters,
                        uintptr_t argon2_parameters_length,
                        uint8_t *result,
                        uintptr_t result_length);
int64_t DeriveKeyPbkdf2(const uint8_t *key,
                        uintptr_t key_length,
                        const uint8_t *salt,
                        uintptr_t salt_length,
                        uint32_t niterations,
                        uint8_t *result,
                        uintptr_t result_length);
int64_t ValidateHeader(const uint8_t *data,
                       uintptr_t data_length,
                       uint16_t data_type);
int64_t GetDefaultArgon2Parameters(uint8_t *argon2_parameters,
                                   uintptr_t argon2_parameters_length);
int64_t GetDefaultArgon2ParametersSize();
int64_t DeriveKeyPair(const uint8_t *password,
                      uintptr_t password_length,
                      const uint8_t *parameters,
                      uintptr_t parameters_length,
                      uint8_t *private_key,
                      uintptr_t private_key_length,
                      uint8_t *public_key,
                      uintptr_t public_key_length);
uint32_t KeySize();
int64_t Decode(const uint8_t *input,
               uintptr_t input_length,
               uint8_t *output,
               uintptr_t output_length);
int64_t Encode(const uint8_t *input,
               uintptr_t input_length,
               uint8_t *output,
               uintptr_t output_length);
int64_t DecodeUrl(const uint8_t *input,
                  uintptr_t input_length,
                  uint8_t *output,
                  uintptr_t output_length);
int64_t EncodeUrl(const uint8_t *input,
                  uintptr_t input_length,
                  uint8_t *output,
                  uintptr_t output_length);
int64_t VersionSize();
int64_t Version(uint8_t *output,
                uintptr_t output_length);